feat: improve UI and code cleanup
- Add dynamic favicon using user's image
- Enhance mobile responsiveness for click message
- Remove colons from CLI prompts

and more

--- a/assets/index.html
+++ b/assets/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Birthday {{ name }}! 🎂</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="" type="image/x-icon">
 </head>
 <body>
     <div class="container">
@@ -33,7 +34,7 @@
         </div>
     </div>
     <div class="credit">
-        Made with ❤️ by <a href="https://wadiecoder.com" target="_blank">wadiecoder.com</a>
+        Made with ❤️ by <a href="https://wadius.com" target="_blank">wadius.com</a>
     </div>
     <audio id="birthdaySong" loop>
         <source src="./assets/happy-birthday.mp3" type="audio/mpeg">
